--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "freedesktop"]
 	path = freedesktop
 	url = https://github.com/lcpz/awesome-freedesktop.git
+
+[submodule "awesome-switcher"]
+	path = freedesktop
+	url = https://github.com/sleroq/awesome-switcher.git
