--- a/.gitmodules
+++ b/.gitmodules
@@ -7,5 +7,5 @@
 	url = https://github.com/lcpz/awesome-freedesktop.git
 
 [submodule "awesome-switcher"]
-	path = freedesktop
+	path = awesome-switcher
 	url = https://github.com/sleroq/awesome-switcher.git
